GameSettings css and html updates

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,7 @@
       <title>Scrabble score</title>
   </head>
   <body>
-    <div class="container">
-      <ul class="nav">
-        <li class="nav-logo">
-          <a class="nav-link" href="/"><img id="nav-logo" src="%PUBLIC_URL%/nav_bar_logo.png" alt="Go to Home page"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Calculate</a>
-        </li>
-      </ul>
-      <div id="content"></div>
-    </div>
+    <div class="container"></div>
     <footer>
       <div class="footer">
         <p>© 2019 Created <a href="#">by Anna Maniuk</a></p>
