--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,13 @@
       <title>Scrabble score</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="navbar"></div>
+        <div class="content"></div>
+    </div>
     <footer>
       <div class="footer">
-        <p>© 2019 Created <a href="#">by Anna Maniuk</a></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis massa eros, feugiat a nibh at.</p>
       </div>
     </footer>
     <div>
