Intro text and footer updates

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,17 @@
         <div class="content"></div>
     </div>
     <footer>
-      <div class="footer">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis massa eros, feugiat a nibh at.</p>
-      </div>
+      <span class="get-in-touch">
+        <a class="email contact-link" href="mailto:anna@maniuk.nyc">Get in touch</a>
+        <span class="copyright">
+          <p>© Copyright Anna Maniuk</p>
+        </span>
+        <span class="icon">
+          <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"><img class="logoimage" src="./git-hub-logo.png" alt="GitHub icon"></a>
+          <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"><img class="logoimage" src="./facebook.png" alt="Facebook icon"></a>
+        </span>
+          
+      </span>
     </footer>
     <div>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> 
