--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,37 @@
   </head>
   <body>
     <div class="navbar"></div>
+
     <div class="container">
-        
         <div class="content"></div>
     </div>
-    <footer>
-      <span class="get-in-touch">
-        <a class="email contact-link" href="mailto:anna@maniuk.nyc">Get in touch</a>
-        <span class="copyright">
-          <p>© Copyright Anna Maniuk</p>
-        </span>
-        <span class="icon">
-          <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"><img class="logoimage" src="./git-hub-logo.png" alt="GitHub icon"></a>
-          <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"><img class="logoimage" src="./facebook.png" alt="Facebook icon"></a>
-        </span>
-          
-      </span>
+
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10">
+            <h5 class="text-uppercase">Contact</h5>
+            <p>For any issues, suggestions or comments, you may contact me via <a class="email" href="mailto:anna@maniuk.nyc">email</a>.</p>
+          </div>
+          <hr class="w-100 d-md-none">
+          <div class="text-center col-md-2 text-md-right">
+            <ul class="list-unstyled">
+              <li class="icons">
+                <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"><p>git</p></a>
+                <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"><p>face</p></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright text-center py-3">© 2019 Copyright Anna Maniuk
+      </div>
     </footer>
+
     <div>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
     </div>
   </body>
 </html>
