Gradient background and flex footer design

--- a/public/index.html
+++ b/public/index.html
@@ -10,38 +10,46 @@
       <title>Scrabble score</title>
   </head>
   <body>
-    <div class="navbar"></div>
-
-    <div class="container">
+    <div class="container vertical-stretch">
+      <div class="top">
+        <div class="navbar"></div>
         <div class="content"></div>
+      </div>
+
+      <div class="spacer"></div>
+
+      <div class="bottom">
+        <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-10">
+                <h5 class="text-uppercase">Contact</h5>
+                <p>For any issues, suggestions or comments, you may contact me via <a class="email" href="mailto:anna@maniuk.nyc">email</a>.</p>
+              </div>
+              <hr class="w-100 d-md-none">
+              <div class="text-center col-md-2 text-md-right">
+                <ul class="list-unstyled">
+                  <li class="icons">
+                    <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"><p>git</p></a>
+                    <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"><p>face</p></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-12">
+                <div class="footer-copyright text-center py-3">© 2019 Copyright Anna Maniuk</div>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+      
     </div>
 
-    <footer class="page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10">
-            <h5 class="text-uppercase">Contact</h5>
-            <p>For any issues, suggestions or comments, you may contact me via <a class="email" href="mailto:anna@maniuk.nyc">email</a>.</p>
-          </div>
-          <hr class="w-100 d-md-none">
-          <div class="text-center col-md-2 text-md-right">
-            <ul class="list-unstyled">
-              <li class="icons">
-                <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"><p>git</p></a>
-                <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"><p>face</p></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="footer-copyright text-center py-3">© 2019 Copyright Anna Maniuk
-      </div>
-    </footer>
-
-    <div>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
