Input box refocuses when the word changes in InGameOverControls

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/smallS.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -12,7 +12,9 @@
   <body>
     <div class="container vertical-stretch">
       <div class="top">
-        <div class="navbar"></div>
+        <div class="navbar">
+          <img id="logo" src="logo.png" alt="Scrabble score logo" width="212px">
+        </div>
         <div class="content"></div>
       </div>
 
