Custom transparent logos. Browser back button action: work in progress

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
               <div class="text-center col-md-2 text-md-right">
                 <ul class="list-unstyled">
                   <li class="icons">
-                    <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"><p>git</p></a>
-                    <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"><p>face</p></a>
+                    <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"></a>
+                    <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"></a>
                   </li>
                 </ul>
               </div>
