--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <!--rel="prefetch" uses browser idle time to download or prefetch documents that the user might visit in the near future-->
-    <link rel="prefetch" href="tile.jpg" />
     <title>Scrabble score</title>
   </head>
   <body>
+    <!--image preload-->
+    <img id="scrabble-tile" src="tile.jpg" alt="Scrabble tile" width="1px">
     <div class="container vertical-stretch">
       <div class="top">
         <div class="navbar">
