--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,8 @@
     <title>Scrabble score</title>
   </head>
   <body>
-    <!--image preload-->
-    <img id="scrabble-tile" src="tile.jpg" alt="Scrabble tile" width="1px">
     <div class="container vertical-stretch">
       <div class="top">
-        <div class="navbar">
-        </div>
         <div class="content"></div>
       </div>
 
@@ -50,5 +46,7 @@
       </div>
       
     </div>
+    <img class="preload-image" src="tile.jpg" style="display:none"RR>
+    <img class="preload-image" src="modifier-frame.png" style="display:none">
   </body>
 </html>
