--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Scrabble Score Online is an easy-to-use scrabble score
+                  calculator that replaces pen-and-paper for keeping track of Scrabble scores.">
+    <meta name="keywords" content="scrabble score online,scrabble score calculator,scrabble score sheet">
+    <meta name="author" content="Anna Maniuk">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <title>Scrabble score</title>
