Modifications: app compatible for ios and android WIP
1. Referencing boothstrap from the public folder.
2. Open new tab in browser when clicking on Facebood/Github icons
3. Adding isCordiva function to util.js
4. Do not play NoSleep if isCordova feature added.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="scrabble score online,scrabble score calculator,scrabble score sheet">
     <meta name="author" content="Anna Maniuk">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <title>Scrabble score</title>
   </head>
   <body>
@@ -33,8 +33,8 @@
               <div class="text-center col-md-2 text-md-right">
                 <ul class="list-unstyled">
                   <li class="icons">
-                    <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online"></a>
-                    <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3"></a>
+                    <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online" target="_blank"></a>
+                    <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3" target="_blank"></a>
                   </li>
                 </ul>
               </div>
