IOS adaptaion camplete
1. Cleaning unnecessary spaces
2. Meta tag description is simplified.
3. Big-logo transformed from css background into img tag for
GameSettings.
4. noSleep variable is not being created if isTest and isCordova.
5. Images relocated into Css (base64):
  a. Tile
  b.  Modifier-frames
  c. Github logo
  d. Facebook logo
6. Note to add .top padding-top: 20px for second css file in
www/static/css for Cordova
7. Note to change path from absolute to relative in index.js (6
changes).
8. Note to change hidden-input box caret color to font-size:0 for second
css file in www/static/css for Cordova.
9. Note to add <meta name="viewport" content="viewport-fit=cover,
initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"
/> into index.js

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- IOS: absolute PATH is not suported in xcode. In index.js, that is located in www directory change PATH to relative for ccs files, js files, manifest.json and boothstrap. -->
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Scrabble Score Online is an easy-to-use scrabble score
+    <meta name="description" content="This is an easy-to-use scrabble score
                   calculator that replaces pen-and-paper for keeping track of Scrabble scores.">
     <meta name="keywords" content="scrabble score online,scrabble score calculator,scrabble score sheet">
     <meta name="author" content="Anna Maniuk">
@@ -48,9 +49,7 @@
           </div>
         </footer>
       </div>
-      
+  
     </div>
-    <img class="preload-image" src="tile.jpg" style="display:none"RR>
-    <img class="preload-image" src="modifier-frame.png" style="display:none">
   </body>
 </html>
