Screen misalignment bug fix
1. index.html additional container class removed
2. tooltip width no longer need to be specified, width and height
replaced by white-space: inline;
3. specified size for modifier-tiles added. Size was reduced by 20%.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>Scrabble score</title>
   </head>
   <body>
-    <div class="container vertical-stretch">
+    <div class="vertical-stretch">
       <div class="top">
         <div class="content"></div>
       </div>
