--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>Scrabble score</title>
   </head>
   <body>
-    <div class="vertical-stretch">
+    <div class="vertical-stretch"> <!-- this class make the top, spacer and bottom work -->
       <div class="top">
         <div class="content"></div>
       </div>
