Improved first-turn directions

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- IOS: absolute PATH is not suported in xcode. In index.js, that is located in www directory change PATH to relative for ccs files, js files, manifest.json and boothstrap. -->
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -15,7 +14,7 @@
     <title>Scrabble score</title>
   </head>
   <body>
-    <div class="vertical-stretch"> <!-- this class make the top, spacer and bottom work -->
+    <div class="vertical-stretch"> <!-- this class make the .top, .spacer and .bottom work -->
       <div class="top">
         <div class="content"></div>
       </div>
