Modified contact information

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,14 @@
             <div class="row">
               <div class="col-md-10">
                 <h5 class="text-uppercase">Contact</h5>
-                <p>For any issues, suggestions or comments, you may contact the developer, Anna Maniuk, via <a class="email" href="mailto:anna@maniuk.nyc">email</a>.</p>
+                <p>For any issues, suggestions or comments, you may contact the developer, Anna Maniuk, via <a class="email" href="mailto:scrabblescoreonline@maniuk.nyc">email</a>.</p>
               </div>
               <hr class="w-100 d-md-none">
               <div class="text-center col-md-2 text-md-right">
                 <ul class="list-unstyled">
                   <li class="icons">
                     <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online" target="_blank"></a>
-                    <a class="facebook contact-link" href="https://www.facebook.com/anna.maniuk.3" target="_blank"></a>
+                    <a class="facebook contact-link" href="https://www.facebook.com/ScrabbleScore.online/" target="_blank"></a>
                   </li>
                 </ul>
               </div>
