Improved description and instructions

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
             <div class="row">
               <div class="col-md-10">
                 <h5 class="text-uppercase">Contact</h5>
-                <p>For any issues, suggestions or comments, you may contact the developer, Anna Maniuk, via <a class="email" href="mailto:scrabblescoreonline@maniuk.nyc">email</a>.</p>
+                <p>For any issues, suggestions or comments, you may contact the developer on 
+                  <a href="https://www.facebook.com/ScrabbleScore.online/" target="_blank">Facebook</a>
+                  or via <a class="email" href="mailto:scrabblescoreonline@maniuk.nyc">scrabblescoreonline@maniuk.nyc</a>.</p>
               </div>
               <hr class="w-100 d-md-none">
               <div class="text-center col-md-2 text-md-right">
