--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="scrabble score online,scrabble score calculator,scrabble score sheet">
     <meta name="author" content="Anna Maniuk">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
     <title>Scrabble score</title>
   </head>
   <body>
@@ -44,7 +44,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div class="footer-copyright text-center py-3">© 2019 Copyright Anna Maniuk</div>
+                <div class="footer-copyright text-center py-3">© 2019 Copyright Anna Maniuk | <a href="%PUBLIC_URL%/privacy_policy.html">Privacy Policy</a></div>
               </div>
             </div>
           </div>
