Resume Game form added
1. Home Page component added
2. Should Resume component added
3. Css styles for Home Page and Should Resume

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-10">
-                <h5 class="text-uppercase">Contact</h5>
+                <h5>Contact</h5>
                 <p>For any issues, suggestions or comments, you may contact the developer on 
                   <a href="https://www.facebook.com/ScrabbleScore.online/" target="_blank">Facebook</a>
                   or via <a class="email" href="mailto:scrabblescoreonline@maniuk.nyc">scrabblescoreonline@maniuk.nyc</a>.</p>
