AppStore && Play Market links added

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
     <title>Scrabble score</title>
   </head>
-  <body>
+  <body class="web-platform">
     <div class="vertical-stretch"> <!-- this class make the .top, .spacer and .bottom work -->
       <div class="top">
         <div class="content"></div>
@@ -25,18 +25,22 @@
         <footer class="page-footer">
           <div class="container">
             <div class="row">
-              <div class="col-md-10">
+              <div class="col-md-8">
                 <h5>Contact</h5>
                 <p>For any issues, suggestions or comments, you may contact the developer on 
                   <a href="https://www.facebook.com/ScrabbleScore.online/" target="_blank">Facebook</a>
                   or via <a class="email" href="mailto:scrabblescoreonline@maniuk.nyc">scrabblescoreonline@maniuk.nyc</a>.</p>
               </div>
               <hr class="w-100 d-md-none">
-              <div class="text-center col-md-2 text-md-right">
+              <div class="text-center col-md-4 text-md-right">
                 <ul class="list-unstyled">
                   <li class="icons">
                     <a class="git-hub contact-link" href="https://github.com/saintmarina/scrabblescore.online" target="_blank"></a>
                     <a class="facebook contact-link" href="https://www.facebook.com/ScrabbleScore.online/" target="_blank"></a>
+                  </li>
+                  <li class="mobile-icons">
+                    <a class="app-store download" href="https://apps.apple.com/us/app/scrabble-score-calculator/id1497216063" target="_blank"></a>
+                    <a class="google-play download" href="https://play.google.com/store/apps/details?id=com.saintmarina.scrabblescore" target="_blank"></a>
                   </li>
                 </ul>
               </div>
