Changes title in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="viewport-fit=cover, initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="This is an easy-to-use scrabble score
-                  calculator that replaces pen-and-paper for keeping track of Scrabble scores.">
+    <meta name="description" content="Scrabble Calculator. Keeps track of the game, and does all the math for you. Replaces traditional pen-and-paper score sheets.">
     <meta name="keywords" content="scrabble score online,scrabble score calculator,scrabble score sheet">
     <meta name="author" content="Anna Maniuk">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
-    <title>Scrabble score</title>
+    <title>Scrabble Score Calculator</title>
   </head>
   <body class="web-platform">
     <div class="vertical-stretch"> <!-- this class make the .top, .spacer and .bottom work -->
