--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="footer-copyright text-center py-3">© 2019 Copyright Anna Maniuk | <a href="%PUBLIC_URL%/privacy_policy.html">Privacy Policy</a></div>
+                <div class="footer-copyright text-center py-3 trademark">SCRABBLE® is a registered trademark. All intellectual property rights in and to the game are owned in the USA and Canada by Hasbro Inc., and throughout the rest of the world by Mattel, Inc.</div>
               </div>
             </div>
           </div>
